--- a/models.qmd
+++ b/models.qmd
@@ -12,4 +12,4 @@ excute:
 library(tidyverse)
 ```
 
-We have survey data from March 2024 conducted by YouGov, which includes responses from 1,559 US adult citizens. We seek to determine the proportion of all votes cast for Joe Biden in the 2024 election based on this data.
+We have survey data from March 2024 conducted by YouGov, which includes responses from 1,559 US adult citizens. We seek to determine the proportion of all votes cast for Joe Biden in the 2024 election based on this data.One problem casting doubt on our approach is the potential instability of voter preferences due to unforeseen political events, which may affect the reliability of past trends in predicting current opinions.
